--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -33,8 +33,11 @@ a, button, input, textarea, select, .btn, .service-card, [role="button"] {
 // Layout components
 header {
     width: 100%;
-    position: relative;
-    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: transparent;
 }
 
 main {
@@ -42,7 +45,7 @@ main {
     width: 100%;
     max-width: 900px;
     margin: 0 auto;
-    padding: 2rem 1rem 4rem 1rem;
+    padding: 0 1rem 4rem 1rem;
     box-sizing: border-box;
     position: relative;
     z-index: 2;
