--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -66,9 +66,13 @@
 
 // Hero section
 .hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    padding: 4rem 0;
+    min-height: 100vh;
     margin-bottom: 4rem;
+    padding: 0 1rem;
     
     &__content {
         max-width: 600px;
