--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -39,6 +39,23 @@ main {
     box-sizing: border-box;
     position: relative;
     z-index: 2;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    
+    @media (min-width: 480px) {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+    
+    @media (min-width: 768px) {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    
+    @media (min-width: 1024px) {
+        padding-left: 2.5rem;
+        padding-right: 2.5rem;
+    }
 }
 
 section {
