--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -48,6 +48,7 @@
 .page-header {
     text-align: center;
     margin-bottom: 3rem;
+    padding-top: 7rem;
     
     &__title {
         font-family: "ParisAvenue", sans-serif;
