--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -23,7 +23,19 @@
         z-index: 10000;
         position: fixed;
         top: 1rem;
-        left: 2rem;
+        left: 1rem;
+        
+        @media (min-width: 480px) {
+            left: 1.5rem;
+        }
+        
+        @media (min-width: 768px) {
+            left: 2rem;
+        }
+        
+        @media (min-width: 1024px) {
+            left: 2.5rem;
+        }
 
         &-line {
             width: 25px;
