--- a/styles/main.css
+++ b/styles/main.css
@@ -103,7 +103,22 @@ footer .footer__credit a {
   z-index: 10000;
   position: fixed;
   top: 1rem;
-  left: 2rem;
+  left: 1rem;
+}
+@media (min-width: 480px) {
+  .navbar__hamburger {
+    left: 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .navbar__hamburger {
+    left: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  .navbar__hamburger {
+    left: 2.5rem;
+  }
 }
 .navbar__hamburger-line {
   width: 25px;
